syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/logosmjt/bookstore-go/pb";

message User {
    string name = 1;
    string email = 3;
    string role = 4;
    google.protobuf.Timestamp updated_at = 5;
    google.protobuf.Timestamp created_at = 6;
}